--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
   "dependencies": {
     "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.6.1",
     "express": "^5.1.0",
-    "mongoose": "^8.15.2",
+    "firebase-admin": "^13.4.0",
+    "mongoose": "^8.16.2",
     "multer": "^2.0.1",
     "multer-storage-cloudinary": "^4.0.0"
   },
