--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "firebase-admin": "^13.4.0",
     "mongoose": "^8.16.2",
     "multer": "^2.0.1",
-    "multer-storage-cloudinary": "^4.0.0"
+    "multer-storage-cloudinary": "^4.0.0",
+    "stripe": "^18.3.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
